Headings, small, and inline vs block (div, span)

--- a/Module-1/index.html
+++ b/Module-1/index.html
@@ -9,5 +9,10 @@
     <h1>Hyper Text Markup Language</h1>
     <!-- creating paragraph -->
      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur fugiat error magni nostrum nihil facilis <b> quibusdam dolores ,</b>delectus ad, molestias quidem velit dignissimos veniam nesciunt maxime, <strong>Lorem, ipsum.</strong> quaerat quod voluptatem. <em>Lorem, ipsum.</em> Inventore.</p>
+
+     <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
+
+     <small>Lorem ipsum dolor sit.</small>
+     
 </body>
 </html>
