Container tag, list tags (ol, ul, li), line break, button

--- a/Module-1/index.html
+++ b/Module-1/index.html
@@ -10,9 +10,25 @@
     <!-- creating paragraph -->
      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur fugiat error magni nostrum nihil facilis <b> quibusdam dolores ,</b>delectus ad, molestias quidem velit dignissimos veniam nesciunt maxime, <strong>Lorem, ipsum.</strong> quaerat quod voluptatem. <em>Lorem, ipsum.</em> Inventore.</p>
 
-     <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
+     <h1>Lorem ipsum dolor sit amet consectetur <br> adipisicing elit.</h1>
 
-     <small>Lorem ipsum dolor sit.</small>
-     
+
+     <small>Lorem ipsum <br> dolor sit.</small>
+<!-- unordered list -->
+
+     <ul>
+        <li>Lorem.</li>
+        <li>Lorem, ipsum.</li>
+        <li>Lorem, ipsum dolor.</li>
+        <li>Lorem ipsum dolor sit.</li>
+     </ul>
+<!-- ordered list -->
+     <ol>
+        <li>Lorem.</li>
+        <li>Lorem, ipsum.</li>
+        <li>Lorem, ipsum dolor.</li>
+        <li>Lorem ipsum dolor sit.</li>
+     </ol>
+
 </body>
 </html>
