--- a/Module-1/index.html
+++ b/Module-1/index.html
@@ -14,7 +14,11 @@
 
 
      <small>Lorem ipsum <br> dolor sit.</small>
-<!-- unordered list -->
+
+
+     <div class="list">
+          <h1>List</h1>
+          <!-- unordered list -->
 
      <ul>
         <li>Lorem.</li>
@@ -29,6 +33,7 @@
         <li>Lorem, ipsum dolor.</li>
         <li>Lorem ipsum dolor sit.</li>
      </ol>
+     </div>
 
 </body>
 </html>
