--- a/Module-4/navbar.html
+++ b/Module-4/navbar.html
@@ -13,7 +13,16 @@
             <ul>
                 <li><a href="video.html">Video</a></li>
                 <li><a href="form.html">Form</a></li>
-                <li><a href="index.html">Home</a></li>
+                <li>
+                    <a href="index.html">Home</a>
+                    
+                    <ul class="dropdown">
+                        <li><a href="video.html">Video</a></li>
+                        <li><a href="form.html">Form</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
