portfolio file added

--- a/Module-5/portfolio.html
+++ b/Module-5/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
-    
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><button><a href="Hire.html">Hire me</a></button></li>
+                <li><button>Hire me</button></li>
             </ul>
         </nav>        
     </header>
