--- a/Module-5/portfolio.html
+++ b/Module-5/portfolio.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <header>
+    <header class="header">
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
@@ -20,7 +20,12 @@
                 <li><a href="blog.html">Blog</a></li>
                 <li><button class="btn-primary">Hire me</button></li>
             </ul>
-        </nav>        
+        </nav>    
+        <div class="banner">
+            <div>
+                <h3>Hi, I am</h3>
+            </div>
+        </div>    
     </header>
 
     <main>
