banner section done

--- a/Module-5/portfolio.html
+++ b/Module-5/portfolio.html
@@ -22,9 +22,15 @@
             </ul>
         </nav>    
         <div class="banner">
-            <div>
-                <h3>Hi, I am</h3>
+            <div class="banner-content">
+                <h3 class="banner-greeting">Hi, I am</h3>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p class="banner-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia delectus deserunt magnam officiis facilis similique minima nobis maiores esse tempora.</p>
+
+                <button class="btn-primary">Download cv</button>
+                <button class="btn-primary">Contact</button>
             </div>
+            <img class="profile-picture" src="images/hardy.png" alt="">
         </div>    
     </header>
 
