about section created

--- a/Module-5/portfolio.html
+++ b/Module-5/portfolio.html
@@ -35,6 +35,11 @@
     </header>
 
     <main>
+        <section class="about">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem deserunt tempora quasi rerum beatae commodi vitae quod molestias praesentium, autem tempore voluptatum! Saepe eum dolor nam corporis optio, quo necessitatibus recusandae mollitia, porro quae libero?</p>
+
+        </section>
 
     </main>
     
