about section created

--- a/Module-5/portfolio.html
+++ b/Module-5/portfolio.html
@@ -39,6 +39,25 @@
             <h3 class="section-title">About Me</h3>
             <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem deserunt tempora quasi rerum beatae commodi vitae quod molestias praesentium, autem tempore voluptatum! Saepe eum dolor nam corporis optio, quo necessitatibus recusandae mollitia, porro quae libero?</p>
 
+            <div class="about-info-container">
+                <div class="about-info">
+                    <h4 class="info-title">Name:</h4>
+                    <p class="info-description">Mary Hardy</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Emain:</h4>
+                    <p class="info-description">info@gmail.com</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Date of Birth:</h4>
+                    <p class="info-description">19 February,1998</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">From:</h4>
+                    <p class="info-description">Los Angeles, USA</p>
+                </div>
+            </div>
+
         </section>
 
     </main>
