about section created

--- a/Module-5/portfolio.html
+++ b/Module-5/portfolio.html
@@ -60,6 +60,13 @@
 
         </section>
 
+        <section class="section-title">
+            <h3>What i do</h3>
+            <p class="section-description">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias praesentium quaerat dolores quam doloremque magnam aspernatur laudantium eos, recusandae dolore? Consequatur perspiciatis quibusdam alias voluptates dolores, suscipit possimus eum nobis quo tenetur non sunt. Nemo?
+            </p>
+        </section>
+
     </main>
     
     <footer>
