--- a/Module-5/portfolio.html
+++ b/Module-5/portfolio.html
@@ -62,9 +62,32 @@
 
         <section class="section-title">
             <h3>What i do</h3>
-            <p class="section-description">
+            <p id="what-i-do-description" class="section-description">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias praesentium quaerat dolores quam doloremque magnam aspernatur laudantium eos, recusandae dolore? Consequatur perspiciatis quibusdam alias voluptates dolores, suscipit possimus eum nobis quo tenetur non sunt. Nemo?
             </p>
+
+            <div class="skill-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <h3 class="skill-title">Vanilla Javascript</h3>
+                    <p class="skill-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, rem? Sunt error cum at, nesciunt a dignissimos nihil magni! Possimus harum ex hic corporis obcaecati.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <h3 class="skill-title">React</h3>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis deserunt recusandae quaerat nesciunt fugit, error veritatis voluptatem. Pariatur inventore fugiat recusandae, modi id ea dolore?</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h3 class="skill-title">Node.Js</h3>
+                    <p class="skill-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam unde, exercitationem totam voluptatem illo corrupti nemo vitae nesciunt quo praesentium asperiores maiores sapiente quas ea.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h3 class="skill-title">MongoDB</h3>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti nulla minus nostrum perferendis ut numquam autem, eaque tempora nemo magnam deserunt ipsum suscipit deleniti quidem!</p>
+                </div>
+            </div>
         </section>
 
     </main>
