skill section created

--- a/Module-5/portfolio.html
+++ b/Module-5/portfolio.html
@@ -66,10 +66,10 @@
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias praesentium quaerat dolores quam doloremque magnam aspernatur laudantium eos, recusandae dolore? Consequatur perspiciatis quibusdam alias voluptates dolores, suscipit possimus eum nobis quo tenetur non sunt. Nemo?
             </p>
 
-            <div class="skill-container">
+            <div class="skills-container">
                 <div class="skill">
                     <img src="images/icons/js.png" alt="">
-                    <h3 class="skill-title">Vanilla Javascript</h3>
+                    <h3 class="skill-title">Javascript</h3>
                     <p class="skill-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, rem? Sunt error cum at, nesciunt a dignissimos nihil magni! Possimus harum ex hic corporis obcaecati.</p>
                 </div>
                 <div class="skill">
@@ -89,6 +89,11 @@
                 </div>
             </div>
         </section>
+
+        <!-- resume -->
+         <section>
+            <h3 class="section-title">A summary of my Resume</h3>
+         </section>
 
     </main>
     
