--- a/Module-5/portfolio.html
+++ b/Module-5/portfolio.html
@@ -93,6 +93,17 @@
         <!-- resume -->
          <section>
             <h3 class="section-title">A summary of my Resume</h3>
+
+
+            <div class="resume-container">
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Education</h3>
+                </div>
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Experience</h3>
+                </div>
+            </div>
+
          </section>
 
     </main>
