resume  section created

--- a/Module-5/portfolio.html
+++ b/Module-5/portfolio.html
@@ -99,7 +99,24 @@
                 <div class="resume-column">
                     <h3 class="resume-column-title">My Education</h3>
 
-                    
+                    <div class="resume-item">
+                        <h2 class="resume-item-title"></h2>
+                        <h3 class="resume-item-info"></h3>
+                        <p class="resume-item-description"></p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title"></h2>
+                        <h3 class="resume-item-info"></h3>
+                        <p class="resume-item-description"></p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title"></h2>
+                        <h3 class="resume-item-info"></h3>
+                        <p class="resume-item-description"></p>
+                    </div>
+
 
                 </div>
                 <div class="resume-column">
