resume  section created

--- a/Module-5/portfolio.html
+++ b/Module-5/portfolio.html
@@ -100,27 +100,46 @@
                     <h3 class="resume-column-title">My Education</h3>
 
                     <div class="resume-item">
-                        <h2 class="resume-item-title"></h2>
-                        <h3 class="resume-item-info"></h3>
-                        <p class="resume-item-description"></p>
+                        <h2 class="resume-item-title">Lorem ipsum dolor sit amet.</h2>
+                        <h3 class="resume-item-info">Lorem, ipsum dolor.</h3>
+                        <p class="resume-item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam in ullam beatae, sapiente sint repudiandae.</p>
                     </div>
                     <hr>
                     <div class="resume-item">
-                        <h2 class="resume-item-title"></h2>
-                        <h3 class="resume-item-info"></h3>
-                        <p class="resume-item-description"></p>
+                        <h2 class="resume-item-title">Lorem ipsum dolor sit amet.</h2>
+                        <h3 class="resume-item-info">Lorem, ipsum dolor.</h3>
+                        <p class="resume-item-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus asperiores, vitae esse deleniti totam quo.</p>
                     </div>
                     <hr>
                     <div class="resume-item">
-                        <h2 class="resume-item-title"></h2>
-                        <h3 class="resume-item-info"></h3>
-                        <p class="resume-item-description"></p>
+                        <h2 class="resume-item-title">Lorem ipsum dolor sit amet.</h2>
+                        <h3 class="resume-item-info">Lorem, ipsum dolor.</h3>
+                        <p class="resume-item-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas id necessitatibus beatae animi, odio in!</p>
                     </div>
 
 
                 </div>
                 <div class="resume-column">
                     <h3 class="resume-column-title">My Experience</h3>
+
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Lorem ipsum dolor sit amet.</h2>
+                        <h3 class="resume-item-info">Lorem, ipsum dolor.</h3>
+                        <p class="resume-item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam in ullam beatae, sapiente sint repudiandae.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Lorem ipsum dolor sit amet.</h2>
+                        <h3 class="resume-item-info">Lorem, ipsum dolor.</h3>
+                        <p class="resume-item-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus asperiores, vitae esse deleniti totam quo.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Lorem ipsum dolor sit amet.</h2>
+                        <h3 class="resume-item-info">Lorem, ipsum dolor.</h3>
+                        <p class="resume-item-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas id necessitatibus beatae animi, odio in!</p>
+                    </div>
+
                 </div>
             </div>
 
